--- a/postcube.cz/src/html/components/guarantee.njk
+++ b/postcube.cz/src/html/components/guarantee.njk
@@ -84,6 +84,6 @@
     </div>
 </section>
 <div class="guarantee__bg">
-  <img alt="Fotografie PostCube" src="https://res.cloudinary.com/topmonks/image/upload/v1620652588/postcube.cz/section-bg01.png" width="600px" height="450px">
-  <img alt="Fotografie doručení zásilky do schránky" src="https://res.cloudinary.com/topmonks/image/upload/v1620652588/postcube.cz/section-bg02.png" width="600px" height="450px">
+  <img alt="Fotografie PostCube" src="https://res.cloudinary.com/topmonks/image/upload/v1620652588/postcube.cz/section-bg01.png" width="2732" height="1740">
+  <img alt="Fotografie doručení zásilky do schránky" src="https://res.cloudinary.com/topmonks/image/upload/v1620652588/postcube.cz/section-bg02.png" width="2732" height="1740">
 </div>
