--- a/postcube.cz/src/stylesheets/components/get-app.scss
+++ b/postcube.cz/src/stylesheets/components/get-app.scss
@@ -10,10 +10,8 @@
       max-width: 420px;
     }
   }
-
-
   @media screen and (min-width: 840px) {
-    background-image: cloudinaryUrl("/postcube.cz/download-app_bg.png");
+    background-image: cloudinaryUrl("/postcube.cz/download-app_bg.png", (width: 1020));
     background-size: 90% 500px;
     background-position: 100%;
     background-repeat: no-repeat;
