--- a/postcube.cz/src/html/components/choose-pc.njk
+++ b/postcube.cz/src/html/components/choose-pc.njk
@@ -1,3 +1,7 @@
+{% set chooseBox = images["choose-pc01.png"]["public_id"] %}
+{% set choosePickup = images["choose-pc02.png"]["public_id"] %}
+
+
 <style>
   .choose-postcube h3 {
     font-size: 18px;
@@ -22,20 +26,20 @@
         <h2 class="content-title">Vyberte si svou ideální PostCube</h2>
       </div>
       <div class="choose-postcube__content mdc-layout-grid__cell">
-        <img alt="Fotografie PostCube" src="https://res.cloudinary.com/topmonks/image/upload/v1620657986/postcube.cz/choose-pc01.png">
+        <img alt="Fotografie PostCube" src="{{ chooseBox | cloudinaryUrl(dpr="auto", width=400) }}">
         <h3>4&nbsp;velikosti chytré poštovní schránky</h3>
         <p>Přizpůsobte velikost PostCube rozměrům zásilek, které vám obvykle
           chodí. Zvolte si rozměr XS, S, M nebo&nbsp;L.</p>
       </div>
       <div class="choose-postcube__content mdc-layout-grid__cell">
-        <img alt="Fotografie doručení zásilky do schránky" src="https://res.cloudinary.com/topmonks/image/upload/v1620657986/postcube.cz/choose-pc02.png">
+        <img alt="Fotografie doručení zásilky do schránky" src="{{ choosePickup | cloudinaryUrl(dpr="auto", width=400) }}">
         <h3>Instalace na míru nebo svépomocí</h3>
         <p>S&nbsp;instalací PostCube vám rádi pomůžeme. Pokud jste zruční, zvládnete
           ji připevnit na plot, k&nbsp;domu nebo umístit na zahradu i&nbsp;sami.
           <a href="#">Jak na&nbsp;to</a></p>
       </div>
       <div class="choose-postcube__content mdc-layout-grid__cell">
-        <img alt="Fotografie PostCube" src="https://res.cloudinary.com/topmonks/image/upload/v1620657986/postcube.cz/choose-pc01.png">
+        <img alt="Fotografie PostCube" src="{{ chooseBox | cloudinaryUrl(dpr="auto", width=400) }}">
         <h3>Cena podle náročnosti vašich přání</h3>
         <p>Pořizovací cena PostCube se odvíjí od její velikosti, způsobu instalace
           a vybraného příslušenství včetně kamerového systému.</p>
