--- a/postcube.cz/src/html/components/get-app.njk
+++ b/postcube.cz/src/html/components/get-app.njk
@@ -1,3 +1,5 @@
+{% set getApp = images["iphone_bg.png"]["public_id"] %}
+
 <link rel="stylesheet" href="/assets/css/components/get-app.css">
 <section class="get-app mdc-layout-grid">
   <div class="mdc-layout-grid__inner layout-wrapper">
@@ -21,9 +23,7 @@
       </div>
     </div>
     <div class="get-app__bg mdc-layout-grid__cell mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-5-desktop">
-      <img alt="Fotografie iPhonů"
-           src="https://res.cloudinary.com/topmonks/image/upload/v1620732837/postcube.cz/iphone_bg.png" width="580"
-           height="690">
+      <img alt="Fotografie iPhonů" src="{{ postcubeBox | cloudinaryUrl(dpr="auto", width=580) }}">
     </div>
   </div>
 </section>
