--- a/postcube.cz/src/html/components/guarantee.njk
+++ b/postcube.cz/src/html/components/guarantee.njk
@@ -1,3 +1,7 @@
+{% set postcubeBox = images["section-bg01.png"]["public_id"] %}
+{% set postcubePickup = images["section-bg02.png"]["public_id"] %}
+
+
 <style>
   .guarantee {
     background-color: var(--postcube-primary);
@@ -84,6 +88,6 @@
     </div>
 </section>
 <div class="guarantee__bg">
-  <img alt="Fotografie PostCube" src="https://res.cloudinary.com/topmonks/image/upload/v1620652588/postcube.cz/section-bg01.png" width="2732" height="1740">
-  <img alt="Fotografie doručení zásilky do schránky" src="https://res.cloudinary.com/topmonks/image/upload/v1620652588/postcube.cz/section-bg02.png" width="2732" height="1740">
+  <img alt="Fotografie PostCube" src="{{ postcubeBox | cloudinaryUrl(dpr="auto", width=860) }}">
+  <img alt="Fotografie doručení zásilky do schránky" src="{{ postcubePickup | cloudinaryUrl(dpr="auto", width=860) }}">
 </div>
