--- a/postcube.cz/src/html/firmy/index.njk
+++ b/postcube.cz/src/html/firmy/index.njk
@@ -1,5 +1,7 @@
 {% extends 'layouts/main.njk' %}
 {% set language = cs %}
+{% set postcubePickup = images["section-bg02.png"]["public_id"] %}
+
 
 {% block title %}
   PostCube - Firmy
@@ -26,7 +28,7 @@
     @media screen and (min-width: 840px) {
       .main-info {
         align-self: center;
-        background-image: url("https://res.cloudinary.com/topmonks/image/upload/v1620652588/postcube.cz/section-bg02.png");
+        background-image: url({{ postcubePickup | cloudinaryUrl(dpr="auto", width=860) }});
         background-size: 45% auto;
         background-position: center right;
         background-repeat: no-repeat;
@@ -60,7 +62,7 @@
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner layout-wrapper">
         <div class="main-info__bg mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-          <img alt="Fotka Vyzvednutí Zásilky" src="https://res.cloudinary.com/topmonks/image/upload/v1620652588/postcube.cz/section-bg02.png">
+          <img alt="Fotka Vyzvednutí Zásilky" src="{{ postcubePickup | cloudinaryUrl(dpr="auto", width=860) }}">
         </div>
         <div class="main-info__content mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
           <h1>PostCube do bytového domu nebo firmy</h1>
