--- a/postcube.cz/src/html/prepravci/index.njk
+++ b/postcube.cz/src/html/prepravci/index.njk
@@ -1,5 +1,7 @@
 {% extends 'layouts/main.njk' %}
 {% set language = cs %}
+{% set deliveryman = images["deliveryman.png"]["public_id"] %}
+
 
 {% block title %}
   PostCube - Přepravci
@@ -33,7 +35,7 @@
     @media (min-width: 840px) and (max-width: 2039px) {
       .main-info {
         align-self: center;
-        background-image: url("https://res.cloudinary.com/topmonks/image/upload/v1620891353/postcube.cz/delivery.jpg");
+        background-image: url({{ deliveryman | cloudinaryUrl(dpr="auto", width=860) }});
         background-size: 45% auto;
         background-position: center left;
         background-repeat: no-repeat;
@@ -47,7 +49,7 @@
       .main-info {
         min-width: 700px;
         align-self: center;
-        background-image: url("https://res.cloudinary.com/topmonks/image/upload/v1620891353/postcube.cz/delivery.jpg");
+        background-image: url({{ deliveryman | cloudinaryUrl(dpr="auto", width=860) }});
         background-size: 45% auto;
         background-position: center left;
         background-repeat: no-repeat;
@@ -82,7 +84,7 @@
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner layout-wrapper">
         <div class="main-info__bg mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-          <img alt="Fotka PostCube Kurýra" src="https://res.cloudinary.com/topmonks/image/upload/v1620891353/postcube.cz/delivery.jpg">
+          <img alt="Fotka PostCube Kurýra" src="{{ deliveryman | cloudinaryUrl(dpr="auto", width=860) }}">
         </div>
         <div class="main-info__content mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
           <h1>Vaši kurýři nás budou milovat!</h1>
