Fixed casing un Nunjucks

--- a/postcube.cz/src/html/o-nas/index.njk
+++ b/postcube.cz/src/html/o-nas/index.njk
@@ -1,9 +1,9 @@
 {% extends 'layouts/main.njk' %}
 {% set language = cs %}
 {% set contactMap = images["contact-map.png"]["public_id"] %}
-{% set team-slavicek = images["jan-slavicek.png"]["public_id"] %}
-{% set team-topmonks = images["Topmonks.png"]["public_id"] %}
-{% set team-lakum = images["Lakum.png"]["public_id"] %}
+{% set teamSlavicek = images["jan-slavicek.png"]["public_id"] %}
+{% set teamTopmonks = images["Topmonks.png"]["public_id"] %}
+{% set teamLakum = images["Lakum.png"]["public_id"] %}
 
 
 {% block title %}
@@ -124,7 +124,7 @@
           <h2>Kdo za projektem stojí?</h2>
         </div>
         <div class="team__member--photo mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
-          <img alt="Fotografie Jana Slavíčka" src="{{ team-slavicek | cloudinaryUrl(dpr="auto", width=180) }}">
+          <img alt="Fotografie Jana Slavíčka" src="{{ teamSlavicek | cloudinaryUrl(dpr="auto", width=180) }}">
         </div>
         <div class="team__member--details mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop">
           <h3>Jan Slavíček</h3>
@@ -139,7 +139,7 @@
             Facilituje několik Leadership Master Mindových&nbsp;kruhů.</p>
         </div>
         <div class="team__member--photo mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
-          <img alt="Logo Firmy Lakum" src="{{ team-lakum | cloudinaryUrl(dpr="auto", width=180) }}">
+          <img alt="Logo Firmy Lakum" src="{{ teamLakum | cloudinaryUrl(dpr="auto", width=180) }}">
         </div>
         <div class="team__member--details mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop">
           <h3>Lakum</h3>
@@ -149,7 +149,7 @@
 </p>
         </div>
         <div class="team__member--photo mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
-          <img alt="Logo Firmy TopMonks" src="{{ team-topmonks | cloudinaryUrl(dpr="auto", width=180) }}">
+          <img alt="Logo Firmy TopMonks" src="{{ teamTopmonks | cloudinaryUrl(dpr="auto", width=180) }}">
         </div>
         <div class="team__member--details mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop">
           <h3>TopMonks, s.r.o.</h3>
