[postcube.cz] Added more missing size attributes to images

--- a/postcube.cz/src/html/components/guarantee.njk
+++ b/postcube.cz/src/html/components/guarantee.njk
@@ -88,6 +88,6 @@
     </div>
 </section>
 <div class="guarantee__bg">
-  <img alt="Fotografie PostCube" src="{{ postcubeBox | cloudinaryUrl(dpr="auto", width=860) }}">
-  <img alt="Fotografie doručení zásilky do schránky" src="{{ postcubePickup | cloudinaryUrl(dpr="auto", width=860) }}">
+  <img alt="Fotografie PostCube" src="{{ postcubeBox | cloudinaryUrl(dpr="auto", width=860) }}" width="860" height="581">
+  <img alt="Fotografie doručení zásilky do schránky" src="{{ postcubePickup | cloudinaryUrl(dpr="auto", width=860) }}" width="860" height="581">
 </div>
