--- a/postcube.cz/src/html/components/get-app.njk
+++ b/postcube.cz/src/html/components/get-app.njk
@@ -23,7 +23,7 @@
       </div>
     </div>
     <div class="get-app__bg mdc-layout-grid__cell mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-5-desktop">
-      <img alt="Fotografie iPhonů" src="{{ postcubeBox | cloudinaryUrl(dpr="auto", width=580) }}">
+      <img alt="Fotografie iPhonů" src="{{ getApp | cloudinaryUrl(dpr="auto", width=580) }}">
     </div>
   </div>
 </section>
