Postcube - Jak box funguje stránka
Img + html + css

--- a/postcube.cz/src/html/components/header.njk
+++ b/postcube.cz/src/html/components/header.njk
@@ -74,7 +74,7 @@
             </div>
           </div>
           <ul class="menu__list">
-            <li class=""><a href="#how-it-works">Jak box funguje</a></li>
+            <li class=""><a href="/jak-box-funguje">Jak box funguje</a></li>
             <li class=""><a href="/o-nas">Kontakt</a></li>
             <li class=""><a class="list__btn" href="/konfigurator">Objednat box</a></li>
             <li class="header--social">
