--- a/postcube.cz/src/stylesheets/typography.scss
+++ b/postcube.cz/src/stylesheets/typography.scss
@@ -1,6 +1,7 @@
 :root {
   --postcube-black: #000;
   --postcube-grey: #A5A5A5;
+  --postcube-grey-lighter: #C4C4C4;
   --postcube-grey-light: #F2F2F2;
   --postcube-white: #fff;
 
