--- a/postcube.cz/src/html/components/how-it-works.njk
+++ b/postcube.cz/src/html/components/how-it-works.njk
@@ -81,6 +81,9 @@
       <p>Chcete vrátit zboží nebo odeslat zásilku? V&nbsp;aplikaci stačí vyplnit
         údaje a balík vložit do&nbsp;boxu.</p>
     </div>
+    <div class="action-link mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      <a href="/jak-box-funguje">Jak to celé funguje?</a>
+    </div>
     <div class="action-btn mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
       <a href="/konfigurator" class="action-btn__label">Objednat PostCube</a>
     </div>
